--- a/css/style.css
+++ b/css/style.css
@@ -41,17 +41,17 @@ body {
 }
 
 #showcase {
-    background-image: url(../img/lightabstract.jpg);
-    background-position: center right; 
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 300px;
+    background-image: url(../img/lightabstract2.jpg);
+    background-attachment: fixed; 
+    background-repeat: ;
+    /* background-size: cover; */
+    min-height: 500px;
     margin-bottom: 30px;
     text-align: center;
 }
 
 #showcase h1{
-    color: #fff;
+    color: yellow;
     font-size: 50px;
     line-height: 1.6em;
     padding-top: 30px;   
@@ -79,8 +79,9 @@ body {
     text-align: center;
     padding: 4px;
     margin-top: 40px;
-
+    position: relative;
 }
+
 @media(max-width: 600px){
     #main, #sidebar{
         width: 100%;
